# lambda

./: CMakeLists.txt  README.md
examples/: booleans.lambda  numbers  pair
include/: ast.hpp  evaluator.hpp  lexer.hpp  parser.hpp  token.hpp
src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp  print.cpp  token.cpp
